Serviços de Caracteristicas
Os serviços estão apresentando um problema nas 3 buscas (referencia
circular)

--- a/desenvolvimento/webservices/eclipse+tomcat/src/main/java/br/com/turismo/negocio/messages/mensagens_pt_BR.properties
+++ b/desenvolvimento/webservices/eclipse+tomcat/src/main/java/br/com/turismo/negocio/messages/mensagens_pt_BR.properties
@@ -4,3 +4,4 @@ M3=Ops... deu pau =/ . Estamos verificando o problema
 M4=Cadastro realizado com sucesso
 M5=Registro já cadastrado
 M6=Removido com sucesso.
+M7=Registro(s) Encontrado(s)
